Bump mockserver.version from 5.11.2 to 5.12.0 (#636)
* Bump mockserver.version from 5.11.2 to 5.12.0

Bumps `mockserver.version` from 5.11.2 to 5.12.0.

Updates `mockserver-junit-jupiter` from 5.11.2 to 5.12.0
- [Release notes](https://github.com/jamesdbloom/mockservice/releases)
- [Changelog](https://github.com/mock-server/mockserver/blob/master/changelog.md)
- [Commits](https://github.com/jamesdbloom/mockservice/compare/mockserver-5.11.2...mockserver-5.12.0)

Updates `mockserver-spring-test-listener` from 5.11.2 to 5.12.0
- [Release notes](https://github.com/jamesdbloom/mockservice/releases)
- [Changelog](https://github.com/mock-server/mockserver/blob/master/changelog.md)
- [Commits](https://github.com/jamesdbloom/mockservice/compare/mockserver-5.11.2...mockserver-5.12.0)

---
updated-dependencies:
- dependency-name: org.mock-server:mockserver-junit-jupiter
  dependency-type: direct:development
  update-type: version-update:semver-minor
- dependency-name: org.mock-server:mockserver-spring-test-listener
  dependency-type: direct:development
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

* add-exports for mockserver

* add-exports for mockserver

* add-exports for mockserver

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Jan-Otto Kröpke <mail@jkroepke.de>